--- a/Benchmark raw BERT.ipynb
+++ b/Benchmark raw BERT.ipynb
@@ -37,7 +37,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building index: 100%|██████████| 103/103 [01:07<00:00,  1.52it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "dataset_preparer = data.DatasetPreparer(config=config)"
    ]
@@ -185,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 976/976 [43:23<00:00,  2.67s/it]\n"
+      "  5%|▍         | 45/976 [02:05<43:50,  2.83s/it] "
      ]
     }
    ],
@@ -217,118 +225,25 @@
     "        question_embeddings = encoder(question_token_ids, question_pad_mask)\n",
     "        candidates_embeddings = encoder(response_token_ids, response_pad_mask)\n",
     "        \n",
-    "    similarity_matrix = score_candidates(question_embeddings, candidates_embeddings)\n",
+    "        similarity_matrix = score_candidates(question_embeddings, candidates_embeddings)\n",
     "    \n",
     "    recall.add(similarity_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>n_candidates 2</th>\n",
-       "      <th>n_candidates 5</th>\n",
-       "      <th>n_candidates 10</th>\n",
-       "      <th>n_candidates 15</th>\n",
-       "      <th>n_candidates 20</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>@ 1</th>\n",
-       "      <td>0.701</td>\n",
-       "      <td>0.439</td>\n",
-       "      <td>0.300</td>\n",
-       "      <td>0.238</td>\n",
-       "      <td>0.204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>@ 3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.795</td>\n",
-       "      <td>0.573</td>\n",
-       "      <td>0.467</td>\n",
-       "      <td>0.407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>@ 5</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.739</td>\n",
-       "      <td>0.609</td>\n",
-       "      <td>0.535</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     n_candidates 2  n_candidates 5  n_candidates 10  n_candidates 15  \\\n",
-       "@ 1           0.701           0.439            0.300            0.238   \n",
-       "@ 3             NaN           0.795            0.573            0.467   \n",
-       "@ 5             NaN             NaN            0.739            0.609   \n",
-       "\n",
-       "     n_candidates 20  \n",
-       "@ 1            0.204  \n",
-       "@ 3            0.407  \n",
-       "@ 5            0.535  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "recall.metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step 1 | Recall @ 1/2: 0.701\n",
-      "Step 1 | Recall @ 1/5: 0.439\n",
-      "Step 1 | Recall @ 1/10: 0.300\n",
-      "Step 1 | Recall @ 1/15: 0.238\n",
-      "Step 1 | Recall @ 1/20: 0.204\n",
-      "Step 1 | Recall @ 3/5: 0.795\n",
-      "Step 1 | Recall @ 3/10: 0.573\n",
-      "Step 1 | Recall @ 3/15: 0.467\n",
-      "Step 1 | Recall @ 3/20: 0.407\n",
-      "Step 1 | Recall @ 5/10: 0.739\n",
-      "Step 1 | Recall @ 5/15: 0.609\n",
-      "Step 1 | Recall @ 5/20: 0.535\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(recall.messages)"
    ]
